--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -45,7 +45,9 @@ jobs:
         run: flutter pub get
 
       - name: Build IPA
-        run: flutter build ipa --release
+        run: |
+          flutter build ipa --release \
+            --export-options-plist=ios/ExportOptions.plist
 
       - name: Upload to TestFlight
         env:
