--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -46,15 +46,20 @@ jobs:
 
       - name: Build IPA
         run: |
-          flutter build ipa --release \
-            --export-options-plist=ios/ExportOptions.plist
+          flutter build ipa --release
 
       - name: Upload to TestFlight
         env:
           APP_STORE_CONNECT_API_KEY_FILE: ${{ secrets.APP_STORE_CONNECT_API_KEY_FILE }}
         run: |
-          # Create temporary key file
-          echo "$APP_STORE_CONNECT_API_KEY_FILE" | base64 --decode > /tmp/auth_key.p8
+          # Create private_keys directory
+          mkdir -p ~/.private_keys
+
+          # Decode and save key with correct name
+          echo "$APP_STORE_CONNECT_API_KEY_FILE" | base64 --decode > ~/.private_keys/AuthKey_A9R62983BW.p8
+          
+          # Set permissions
+          chmod 600 ~/.private_keys/AuthKey_A9R62983BW.p8
           
           # Upload using key file
           xcrun altool --upload-app -f build/ios/ipa/Syrius.ipa -t ios \
