--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -46,17 +46,12 @@ jobs:
 
       - name: Build IPA
         run: |
-          flutter build ipa --release
+          flutter build ipa --release --export-method app-store
 
-      - name: Check IPA location
+      - name: Verify IPA Creation
         run: |
-          echo "Checking all possible IPA locations..."
-          echo "Checking build/ios/ipa/"
-          ls -R build/ios/ipa/ || true
-          echo "Checking build/ios/archive/"
-          ls -R build/ios/archive/ || true
-          echo "Checking build/ios/"
-          ls -R build/ios/ || true
+          echo "Checking for IPA file..."
+          find build/ios -name "*.ipa"
 
       - name: Upload to TestFlight
         env:
@@ -73,9 +68,9 @@ jobs:
           chmod 600 ~/.private_keys/AuthKey_${APP_STORE_CONNECT_API_KEY}.p8
           
           # Upload using key file
-          xcrun altool --upload-app -f build/ios/archive/Runner.xcarchive/Products/Applications/Runner.app -t ios \
+          xcrun altool --upload-app -f build/ios/ipa/Syrius.ipa -t ios \
             --apiKey "${{ secrets.APP_STORE_CONNECT_API_KEY }}" \
             --apiIssuer "${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}"
           
           # Clean up
-          rm /tmp/auth_key.p8
+          rm ~/.private_keys/AuthKey_${APP_STORE_CONNECT_API_KEY}.p8
