--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Build IPA
         run: |
-          flutter build ipa --release --export-method app-store
+          flutter build ipa --release --export-method app-store --verbose
 
       - name: Verify IPA Creation
         run: |
