--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -46,8 +46,13 @@ jobs:
 
       - name: Build IPA
         run: |
-          flutter build ipa --release --export-method app-store --verbose
-          ls -la build/ios/ipa/  # Let's see what files are actually created
+          xcrun xcodebuild -exportArchive \
+            -allowProvisioningDeviceRegistration \
+            -allowProvisioningUpdates \
+            -archivePath build/ios/archive/Runner.xcarchive \
+            -exportPath build/ios/ipa \
+            -exportOptionsPlist /var/folders/3s/b36dp_4s3wv3byw057j8bp940000gn/T/flutter_tools.Cri6PH/flutter_build_ios.fyMBok/ExportOptions.plist \
+            -verbose
 
       - name: Verify IPA Creation
         run: |
