--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -46,12 +46,25 @@ jobs:
 
       - name: Build IPA
         run: |
+          # Create ExportOptions.plist
+          cat << EOF > ExportOptions.plist
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+              <key>method</key>
+              <string>app-store</string>
+          </dict>
+          </plist>
+          EOF
+          
+          # Build IPA using our ExportOptions.plist
           xcrun xcodebuild -exportArchive \
             -allowProvisioningDeviceRegistration \
             -allowProvisioningUpdates \
             -archivePath build/ios/archive/Runner.xcarchive \
             -exportPath build/ios/ipa \
-            -exportOptionsPlist /var/folders/3s/b36dp_4s3wv3byw057j8bp940000gn/T/flutter_tools.Cri6PH/flutter_build_ios.fyMBok/ExportOptions.plist \
+            -exportOptionsPlist ExportOptions.plist \
             -verbose
 
       - name: Verify IPA Creation
