--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -2,13 +2,19 @@ name: Build and release Android APK
 
 on:
   push:
-    branches:
-      - cicd
+    tags:
+      - 'v*'  # Triggers on version tags
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      JAVA_VERSION: '17'
+      FLUTTER_VERSION: '3.24.5'
+      AAB_PATH: build/app/outputs/bundle/release/app-release.aab
+      KEYSTORE_PATH: android/upload-keystore.jks
+      KEY_PROPS_PATH: android/key.properties
 
     steps:
       - name: Checkout repository
@@ -18,45 +24,52 @@ jobs:
         run: |
           mkdir releases
           
-      - name: Set variables
+      - name: Verify version match
         run: |
-          SYRIUS="v$(cat pubspec.yaml | grep version | sed 's/version://' | xargs)"
-          echo "Syrius Mobile Version: $SYRIUS"
-          echo "SYRIUS_VERSION=$SYRIUS" >> $GITHUB_ENV
+          TAG_VERSION="${GITHUB_REF#refs/tags/v}"  # Remove 'v' prefix
+          PUBSPEC_VERSION=$(cat pubspec.yaml | grep version | sed 's/version://' | xargs)
+          if [ "$TAG_VERSION" != "$PUBSPEC_VERSION" ]; then
+            echo "Error: Tag version ($TAG_VERSION) doesn't match pubspec.yaml version ($PUBSPEC_VERSION)"
+            exit 1
+          fi
+          echo "Version check passed: $PUBSPEC_VERSION matches tag version"
 
-      - name: Set up JDK 17
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: ${{ env.JAVA_VERSION }}
 
-      - name: Set up Flutter
+      - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.3'
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+
+      # Decode our secrets
+      - name: Decode Keystore
+        run: echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 --decode > ${{ env.KEYSTORE_PATH }}
+
+      - name: Decode Key Properties
+        run: echo "${{ secrets.ANDROID_KEY_PROPERTIES }}" | base64 --decode > ${{ env.KEY_PROPS_PATH }}
 
       - name: Install dependencies
-        run: |
-          flutter pub get
+        run: flutter pub get
 
       - name: Build APK split per ABI
-        run: |
-          flutter build apk --release --target-platform android-arm64,android-x64 --split-per-abi      
+        run: flutter build apk --release --target-platform android-arm64,android-x64 --split-per-abi      
 
       - name: Build APK universal
-        run: |
-          flutter build apk --release
+        run: flutter build apk --release
       
       - name: Copy to releases directory
         run: |
-          cp ./build/app/outputs/flutter-apk/app-arm64-v8a-release.apk ./releases/syrius-mobile-${{ env.SYRIUS_VERSION }}-arm64-v8a-release.apk
-          cp ./build/app/outputs/flutter-apk/app-x86_64-release.apk ./releases/syrius-mobile-${{ env.SYRIUS_VERSION }}-x86_64-release.apk
-          cp ./build/app/outputs/flutter-apk/app-release.apk ./releases/syrius-mobile-${{ env.SYRIUS_VERSION }}-universal-release.apk
+          cp ./build/app/outputs/flutter-apk/app-arm64-v8a-release.apk ./releases/syrius-mobile-${{ github.ref_name }}-arm64-v8a-release.apk
+          cp ./build/app/outputs/flutter-apk/app-x86_64-release.apk ./releases/syrius-mobile-${{ github.ref_name }}-x86_64-release.apk
+          cp ./build/app/outputs/flutter-apk/app-release.apk ./releases/syrius-mobile-${{ github.ref_name }}-universal-release.apk
 
       - name: Generate checksums
         run: |
           cd ./releases
-          echo $(sha256sum *)
           echo $(sha256sum *) >> SHA256CHECKSUMS.txt
 
       - name: Upload files to a GitHub release
@@ -64,7 +77,19 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: releases/*
-          release_name: ${{ env.SYRIUS_VERSION }}
-          tag: ${{ env.SYRIUS_VERSION }}-alphanet
+          release_name: ${{ github.ref_name }}
+          tag: ${{ github.ref_name }}
           file_glob: true
           overwrite: true
+
+      - name: Build App Bundle
+        run: flutter build appbundle --release
+
+      - name: Upload to Play Store
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJson: ${{ secrets.PLAY_STORE_CONFIG_JSON }}
+          packageName: ${{ secrets.ANDROID_APP_NAME }}
+          releaseFiles: ${{ env.AAB_PATH }}
+          track: internal
+          status: completed
