--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -12,6 +12,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Verify version match
+        run: |
+          TAG_VERSION="${GITHUB_REF#refs/tags/v}"  # Remove 'v' prefix
+          PUBSPEC_VERSION=$(cat pubspec.yaml | grep version | sed 's/version://' | xargs)
+          if [ "$TAG_VERSION" != "$PUBSPEC_VERSION" ]; then
+            echo "Error: Tag version ($TAG_VERSION) doesn't match pubspec.yaml version ($PUBSPEC_VERSION)"
+            exit 1
+          fi
+          echo "Version check passed: $PUBSPEC_VERSION matches tag version"
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
