--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -57,8 +57,8 @@ jobs:
 
       - name: Build APK split per ABI
         env:
-          GRADLE_OPTS: "-Dorg.gradle.daemon=false"
-        run: flutter build apk --release --target-platform android-arm64,android-x64 --split-per-abi    
+          GRADLE_OPTS: "-Dorg.gradle.daemon=true -Dorg.gradle.configureondemand=true -Dorg.gradle.parallel=true -Dorg.gradle.caching=true -Dkotlin.incremental=false"
+        run: flutter build apk --release --target-platform android-arm64,android-x64 --split-per-abi
 
       - name: Build APK universal
         run: flutter build apk --release
@@ -95,7 +95,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJson: service-account.json
-          packageName: ${{ secrets.ANDROID_APP_NAME }}
+          packageName: ${{ secrets.BUNDLE_ID }}
           releaseFiles: ${{ env.AAB_PATH }}
           track: internal
           status: completed
