--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -15,6 +15,7 @@ jobs:
       AAB_PATH: build/app/outputs/bundle/release/app-release.aab
       KEYSTORE_PATH: android/upload-keystore.jks
       KEY_PROPS_PATH: android/key.properties
+      LOCAL_PROPS_PATH: android/local.properties
 
     steps:
       - name: Checkout repository
@@ -51,6 +52,19 @@ jobs:
 
       - name: Decode Key Properties
         run: echo "${{ secrets.ANDROID_KEY_PROPERTIES }}" | base64 --decode > ${{ env.KEY_PROPS_PATH }}
+
+      - name: Create local.properties
+        run: |
+          VERSION=$(cat pubspec.yaml | grep version: | sed 's/version: //' | xargs)
+          # Convert semantic version (e.g., 1.0.8) to version code (e.g., 10008)
+          MAJOR=$(echo $VERSION | cut -d. -f1)
+          MINOR=$(echo $VERSION | cut -d. -f2)
+          PATCH=$(echo $VERSION | cut -d. -f3)
+          VERSION_CODE=$((MAJOR * 10000 + MINOR * 100 + PATCH))
+          echo "flutter.versionCode=$VERSION_CODE" > ${{ env.LOCAL_PROPS_PATH }}
+          echo "flutter.versionName=$VERSION" >> ${{ env.LOCAL_PROPS_PATH }}
+          echo "sdk.dir=/usr/local/lib/android/sdk" >> ${{ env.LOCAL_PROPS_PATH }}
+          echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.24.5-x64" >> ${{ env.LOCAL_PROPS_PATH }}
 
       - name: Install dependencies
         run: flutter pub get
