--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -56,17 +56,20 @@ jobs:
       - name: Create local.properties
         run: |
           VERSION=$(cat pubspec.yaml | grep version: | sed 's/version: //' | xargs)
-          # Convert semantic version (e.g., 1.0.11) to version code (e.g., 10011)
           MAJOR=$(echo $VERSION | cut -d. -f1)
           MINOR=$(echo $VERSION | cut -d. -f2)
           PATCH=$(echo $VERSION | cut -d. -f3)
           VERSION_CODE=$((MAJOR * 10000 + MINOR * 100 + PATCH))
           echo "Version code will be: $VERSION_CODE" # Debug output
-          echo "flutter.versionCode=$VERSION_CODE" > ${{ env.LOCAL_PROPS_PATH }}
-          echo "flutter.versionName=$VERSION" >> ${{ env.LOCAL_PROPS_PATH }}
-          echo "sdk.dir=/usr/local/lib/android/sdk" >> ${{ env.LOCAL_PROPS_PATH }}
-          echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.24.5-x64" >> ${{ env.LOCAL_PROPS_PATH }}
-          cat ${{ env.LOCAL_PROPS_PATH }} # Debug output
+          # Create file from scratch with all required properties
+          {
+            echo "flutter.versionCode=${VERSION_CODE}"
+            echo "flutter.versionName=${VERSION}"
+            echo "sdk.dir=/usr/local/lib/android/sdk"
+            echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.24.5-x64"
+          } > ${{ env.LOCAL_PROPS_PATH }}
+          echo "Content of local.properties:"
+          cat ${{ env.LOCAL_PROPS_PATH }}
 
       - name: Install dependencies
         run: flutter pub get
